# bluedot-intro-to-mech-interp

./: .gitignore  README.md  basic_analysis.py  fourier_analysis.py  loss.py  make_figures.py  model.py  plot_losses.py  plot_training_losses.py  pyproject.toml  report.md  task.py
figures/: key_frequencies.csv  key_frequencies_by_singular_value.csv  log_loss.csv  singular_values.csv
notebooks/: train.ipynb
src/: const.py  model.py  plot.py  task.py  utils.py
